# curso-fastapi

./: .gitignore  README.md  pyproject.toml
app/: db.py  main.py  models.py
app/routes/: customers.py  plans.py  transactions.py
app/tests/: conftest.py  test_customers.py  test_plans.py  test_transactions.py
